--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <h2>1. Naam aanpassen</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/who-am-i.jpg">
                     </div>
                 </header>
 
@@ -122,24 +122,24 @@
                         </p>
                     </div>
                     <div class="meta">
-                        <img id="winnaar-image" src="images/chuck-vs-bruce.jpg">
+                        <img id="winnaar-image" src="images/elon-bezos.jpeg">
                     </div>
                 </header>
 
                 <section>
-                    <h3>Chuck Norris</h3>
+                    <h3>Elon Musk</h3>
                     <ul>
-                        <li>Begin een nieuwe branch: <strong class="badge branch">chuck</strong> vanuit <strong class="badge branch">master</strong></li>
-                        <li>Pas de hierboven aangegeven winnaar (id=winnaar) aan naar: <em>Chuck Norris</em></li>
-                        <li>Pas de src van de afbeelding (id=winnaar-image) aan naar: <em>images/chuck-norris.jpg</em></li>
+                        <li>Begin een nieuwe branch: <strong class="badge branch">elon</strong> vanuit <strong class="badge branch">master</strong></li>
+                        <li>Pas de hierboven aangegeven winnaar (id=winnaar) aan naar: <em>Elon Musk</em></li>
+                        <li>Pas de src van de afbeelding (id=winnaar-image) aan naar: <em>images/elon-musk.jpg</em></li>
                         <li>Commit deze wijziging.</li>
                     </ul>
 
-                    <h3>Bruce Lee</h3>
+                    <h3>Jeff Bezos</h3>
                     <ul>
-                        <li>Begin een nieuwe branch: <strong class="badge branch">bruce</strong> vanuit <strong class="badge branch">master</strong></li>
-                        <li>Pas de hierboven aangegeven winnaar (id=winnaar) aan naar: <em>Bruce Lee</em></li>
-                        <li>Pas de src van de afbeelding (id=winnaar-image) aan naar: <em>images/bruce-lee.jpg</em></li>
+                        <li>Begin een nieuwe branch: <strong class="badge branch">jeff</strong> vanuit <strong class="badge branch">master</strong></li>
+                        <li>Pas de hierboven aangegeven winnaar (id=winnaar) aan naar: <em>Jeff Bezos</em></li>
+                        <li>Pas de src van de afbeelding (id=winnaar-image) aan naar: <em>images/jeff-bezos.jpeg</em></li>
                         <li>Commit deze wijziging.</li>
                     </ul>
 
@@ -149,20 +149,20 @@
                         <li>Refresh de pagina en check of Niemand de winnaar is</li>
                         <li>
                             <em class="badge merge">Merge</em> de aanpassingen van 
-                            <strong class="badge branch">bruce</strong> naar
+                            <strong class="badge branch">jeff</strong> naar
                             <strong class="badge branch">master</strong>.
                         </li>
-                        <li>Controleer of Bruce lee de winnaar is (refresh de pagina).</li>
+                        <li>Controleer of <em>Jeff Bezos</em> de winnaar is (refresh de pagina).</li>
                         <li>
                             <em class="badge merge">Merge</em> de aanpassingen van 
-                            <strong class="badge branch">chuck</strong> naar
+                            <strong class="badge branch">elon</strong> naar
                             <strong class="badge branch">master</strong>.
                         </li>
                         <li>
                             <strong>Conflict!</strong>
                             <p>Je hebt nu een conflict in de header van dit article.</p>
                         </li>
-                        <li>Zorg dat <em>Chuck Norris</em> de winnaar is.</li>
+                        <li>Zorg dat <em>Elon Musk</em> de winnaar is.</li>
                         <li>Commit de merge</li>
                         <li>Push de <strong class="badge branch">master</strong> branch naar github</li>
                     </ul>
@@ -176,31 +176,31 @@
                         <p>Soms is er bij een conflict geen keuze, maar moet je handmatig de wijzigingen samen voegen.</p>
                         <p>
                             Donaties:
-                            <span id="donaties">BTC 0,00</span>
+                            <span id="donaties">DOGE 0,00</span>
                         </p>
                     </div>
                     <div class="meta">
-                        <img src="images/kapow.png">
+                        <img src="images/doge.png">
                     </div>
                 </header>
 
                 <section>
                     <h3>Gulle gever</h3>
                     <ul>
-                        <li>Begin een nieuwe branch: <strong class="badge branch">gulle-gever</strong>  vanuit <strong class="badge branch">master</strong></li>
+                        <li>Begin een nieuwe branch: <strong class="badge branch">brenninkmeijer</strong>  vanuit <strong class="badge branch">master</strong></li>
                         <li>
-                            De gulle gever heeft net 1 hele Bitcoin in onze Wallet gestopt. <br>
-                            Pas het hierboven aangegeven donatiebedrag (id=donaties) aan naar: <em>1,00</em>
+                            De familie Brenninkmeijer heeft net <strong>233</strong> hele DogeCoin in onze Wallet gestopt. <br>
+                            Pas het hierboven aangegeven donatiebedrag (id=donaties) aan naar: <em>DOGE 233,00</em>
                         </li>
                         <li>Commit deze wijziging.</li>
                     </ul>
 
-                    <h3>Dagobert Duck</h3>
+                    <h3>Grutte</h3>
                     <ul>
-                        <li>Begin een nieuwe branch: <strong class="badge branch">dagobert-duck</strong> vanuit <strong class="badge branch">master</strong></li>
+                        <li>Begin een nieuwe branch: <strong class="badge branch">grutte</strong> vanuit <strong class="badge branch">master</strong></li>
                         <li>
-                            Dagobert is een beetje skeer, en geeft ons 0,01 BTC.<br>
-                            Pas het hierboven aangegeven donatiebedrag (id=donaties) aan naar: <em>0,01</em></li>
+                            Grutte is een beetje skeer, hij heeft 1000 DogeCoin belooft, maar geeft ons slechts een halve.<br>
+                            Pas het hierboven aangegeven donatiebedrag (id=donaties) aan naar: <em>DOGE 0,50</em></li>
                         <li>Commit deze wijziging.</li>
                     </ul>
 
@@ -208,13 +208,13 @@
                     <ul>
                         <li>
                             <em class="badge merge">Merge</em> de aanpassingen van 
-                            <strong class="badge branch">dagobert-duck</strong> naar
+                            <strong class="badge branch">grutte</strong> naar
                             <strong class="badge branch">master</strong>.
                         </li>
                         <li>Controleer of het donatie bedrag klopt (refresh de pagina).</li>
                         <li>
                             <em class="badge merge">Merge</em> de aanpassingen van 
-                            <strong class="badge branch">gulle-gever</strong> naar
+                            <strong class="badge branch">brenninkmeijer</strong> naar
                             <strong class="badge branch">master</strong>.
                         </li>
                         <li>
@@ -234,11 +234,11 @@
                         <h2>5. Een branch rebasen</h2>
                         <p>
                             I are: 
-                            <span id="animal">Weasel</span>
+                            <span id="animal">Coyote</span>
                         </p>
                     </div>
                     <div class="meta">
-                        <img id="animal-image" src="images/iam-weasel.png">
+                        <img id="animal-image" src="images/roadrunner-coyote.png">
                     </div>
                 </header>
 
@@ -246,7 +246,7 @@
                     <ul>
                         <li>Zorg dat je in de <strong class="badge branch">master</strong> branch zit</li>
                         <li>Begin een nieuwe branch: <strong class="badge branch">rebasing</strong></li>
-                        <li>Pas de inhoud van het element hierboven (id=animal) aan van <em>Weasel</em> naar: <em>Baboon</em></li>
+                        <li>Pas de inhoud van het element hierboven (id=animal) aan van <em>Coyote</em> naar: <em>Roadrunner</em></li>
                         <li>Commit deze wijziging.</li>
                     </ul>
 
@@ -254,7 +254,7 @@
                     <ul>
                         <li>Ga terug naar de <strong class="badge branch">master</strong> branch</li>
                         <li>
-                            Pas het element hierboven aan (id=animal) aan van een 
+                            Pas de <em>tag</em> hierboven aan (id=animal) aan van een 
                             <strong>span</strong> naar een
                             <strong>strong</strong>
                         </li>
@@ -269,7 +269,7 @@
                         </li>
                         <li>
                             Los het conflict op, controleer het resultaat en maak een commit.<br>
-                            In het eind resultaat heb je dan een <strong>strong</strong> met daarin <em>Baboon</em>
+                            In het eind resultaat heb je dan een <strong>strong</strong> met daarin <em>Roadrunner</em>
                         </li>
                         <li>
                             <em class="badge merge">Merge</em> de aanpassingen van 
