+ winnaar 'Elon Musk' toegevoegd. + afbeelding src code aangepast naar Elon Musk foto

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                     <h2>3. Een conflict oplossen</h2>
                     <p>
                         Winnaar:
-                        <span id="winnaar">Niemand</span>
+                        <span id="winnaar">Elon Musk</span>
                     </p>
                 </div>
                 <div class="meta">
-                    <img id="winnaar-image" src="images/elon-bezos.jpeg">
+                    <img id="winnaar-image" src="images/elon-musk.jpg">
                 </div>
             </header>
 
