--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <h2>5. Een branch rebasen</h2>
                     <p>
                         I are:
-                        <span id="animal">Coyote</span>
+                        <span id="animal">Roadrunner</span>
                     </p>
                 </div>
                 <div class="meta">
