+ Coyote naar Roadrunner aangepast.

--- a/index.html
+++ b/index.html
@@ -229,8 +229,7 @@
                     <h2>5. Een branch rebasen</h2>
                     <p>
                         I are:
-                        <strong id="animal">Coyote</strong>
-                    </p>
+                        <strong id="animal">Roadrunner</strong> </p>
                 </div>
                 <div class="meta">
                     <img id="animal-image" src="images/roadrunner-coyote.png">
